--- a/lsh_post1/lsh_post1.html
+++ b/lsh_post1/lsh_post1.html
@@ -14,34 +14,17 @@
     <link rel="stylesheet" href="tufte-edited.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108911796-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-108911796-1');
-    </script>
-
   </head>
   <body>
     <p style="display:none">\(\newcommand{\latexonlyrule}[2]{}\)</p>
     <div class="main">
-
-        <p><a href="http://unboxresearch.com/tf101">
-        <b>Learn TensorFlow</b>: 1-day SF Workshop 10/6/18.
-        <br />
-        Register by 9/21 to save $250 off regular ticket price.
-        </a></p>
-
-        <hr />
-
       <div class="title">Introduction to Locality-Sensitive Hashing</div>
-      <div class="author">Tyler Neylon</div>
+      <div class="author">Tyler Neylon — <span style="font-size: 80%">(Got a
+          machine learning project? Email me:
+          <a href="mailto:tyler@unboxresearch.com">tyler@unboxresearch.com</a>)
+          </div></span>
       <div class="date">521.2018</div>
-      <p>[Formats: <a href="http://unboxresearch.com/articles/lsh_post1.html">html</a> | <a href="http://tylerneylon.com/a/lsh1/lsh_post1.pdf">pdf</a> | <a href="http://tylerneylon.com/a/lsh1/lsh_post1_for_kindle.pdf">kindle pdf</a>]</p>
+      <p>[Formats: <a href="http://tylerneylon.com/a/lsh1/lsh_post1.html">html</a> | <a href="http://tylerneylon.com/a/lsh1/lsh_post1.pdf">pdf</a> | <a href="http://tylerneylon.com/a/lsh1/lsh_post1_for_kindle.pdf">kindle pdf</a>]</p>
       <p><em>Locality-sensitive hashing</em> (LSH) is a set of techniques that dramatically speed up search-for-neighbors or near-duplication detection on data. These techniques can be used, for example, to filter out duplicates of scraped web pages at an impressive speed, or to perform near-constant-time lookups of nearby points from a geospatial data set.</p>
       <div class="figure">
       <p class="caption">Figure 1: A preview of LSH in action. Only hash collisions were used to find the weights in this image — no pairwise distances were explicitly computed.</p>
@@ -170,6 +153,9 @@
       <p>This article has focused on numeric, 2-dimensional data because it’s easier to visualize. Locality-sensitive hashes can certainly be used for many data types including strings, sets, or high-dimensional vectors.</p>
       <p>Yet another ingredient to throw into the mix here is a set of techniques to boost performance tht treat an LSH as a black box. My favorite approach here is to simply perform multiple lookups on a hash system, each time using <span class="math inline">\(q + \varepsilon\)</span> as an input, where <span class="math inline">\(q\)</span> is your query value, and <span class="math inline">\(\varepsilon\)</span> is a random variable centered at zero <span class="citation">(Panigrahy 2006)</span>.</p>
       <p>There’s a lot more that can be said about LSH techniques. If there is reader interest, I may write a follow-up article explaining the details of min-wise hashing, which is a fun case that’s simultaneously good at quickly finding nearby sets as well as nearby strings <span class="citation">(Broder et al. 2000)</span>.</p>
+      <hr />
+      <p><em><strong>Hi!</strong> I hope you enjoyed my article. As you can see, I love building systems that get the most out of data. If you’d like to work together on a machine learning project, I’d love to hear from you. My company, Unbox Research, has a small team of talented ML engineers. We specialize in helping content platforms make more intelligent use of their data, which translates to algorithmic text and image comprehension as well as driving user engagement through discovery or personalization. I’m <a href="mailto:tyler@unboxresearch.com">tyler@unboxresearch.com</a>.</em></p>
+      <p><em>(I’m also teaching a course on TensorFlow in New York in Jan 2019! <a href="http://unboxresearch.com/tf101">Register here.</a>)</em></p>
       <hr />
       <h1 id="references" class="unnumbered">References</h1>
       <div id="refs" class="references">
