Code cleanup, add an index handler.
Goals here:
* Make each per-image js file highly focused and ideally short.
* Make it easy for me to navigate from localhost to any image.
* Try to make the code not too embarrassing if other people see it. :)

--- a/permutations/images/scratch/img1_random_g3.html
+++ b/permutations/images/scratch/img1_random_g3.html
@@ -1,16 +1,10 @@
 <!DOCTYPE HTML>
-<!--
-
-Try to draw G_n by randomly placing each point in a unit circle,
-and then drawing the transposition edges between them.
-
--->
 <html>
   <body style="background-color:#808">
     <svg width="10" height="10" version="1.1"
          style="background-color:#fff"
          id="svg" xmlns="http://www.w3.org/2000/svg">
     </svg>
-    <script type="module" src="img1.js"></script>
+    <script type="module" src="img1_random_g3.js"></script>
   </body>
 </html>
