img8: Add support for random node ordering.

--- a/permutations/images/scratch/img8_circular.html
+++ b/permutations/images/scratch/img8_circular.html
@@ -57,6 +57,7 @@
     <div class="btn-group">
       <button id="lex">lexicographic</button>
       <button id="plain" class="btn-active">plain changes</button>
+      <button id="random">random</button>
     </div>
 
     <script type="module" src="img8_circular.js"></script>
