Start the n-partite visualization.

--- a/permutations/images/scratch/img9_n_partite.html
+++ b/permutations/images/scratch/img9_n_partite.html
@@ -50,6 +50,13 @@
       <button id="n5">5</button>
       <button id="n6">6</button>
     </div>
+    ordering:
+    <div class="btn-group">
+      <button id="lex" class="btn-active">lexicographic</button>
+      <button id="plain">plain changes</button>
+      <button id="random">random</button>
+    </div>
+
 
     <br />
     <script type="module" src="img9_n_partite.js"></script>
