Support different orderings for img9.

--- a/permutations/images/scratch/img9_n_partite.html
+++ b/permutations/images/scratch/img9_n_partite.html
@@ -49,6 +49,7 @@
       <button id="n4">4</button>
       <button id="n5">5</button>
       <button id="n6">6</button>
+      <button id="n7">7</button>
     </div>
     ordering:
     <div class="btn-group">
