Rename img files so I can go past 9.
... and have a naive sorting alg still put them in the order I meant.

--- a/permutations/images/scratch/img09_n_partite.html
+++ b/permutations/images/scratch/img09_n_partite.html
@@ -14,18 +14,18 @@
         cursor: pointer;
         float: left;
       }
-  
+
       .btn-group button:not(:last-child) {
         border-right: none;
       }
-  
+
       /* Clear floats (clearfix hack) */
       .btn-group:after {
         content: "";
         clear: both;
         display: table;
       }
-  
+
       /* Add a background color on hover */
       .btn-group button:hover {
         background-color: #3e8e41;
@@ -51,15 +51,15 @@
       <button id="n6">6</button>
       <button id="n7">7</button>
     </div>
-
-    <br />
-    layout:
+    ordering:
     <div class="btn-group">
-      <button id="lex">lexicographic</button>
-      <button id="plain" class="btn-active">plain changes</button>
+      <button id="lex" class="btn-active">lexicographic</button>
+      <button id="plain">plain changes</button>
       <button id="random">random</button>
     </div>
 
-    <script type="module" src="img8_circular.js"></script>
+
+    <br />
+    <script type="module" src="img09_n_partite.js"></script>
   </body>
 </html>
