--- a/permutations/images/scratch/img07_bipartite_g5.html
+++ b/permutations/images/scratch/img07_bipartite_g5.html
@@ -5,6 +5,6 @@
          style="background-color:#fff"
          id="svg" xmlns="http://www.w3.org/2000/svg">
     </svg>
-    <script type="module" src="img4_kinda_bipartite_g5.js"></script>
+    <script type="module" src="img07_bipartite_g5.js"></script>
   </body>
 </html>
