--- a/permutations/images/src/img11_permutohedron_g4.html
+++ b/permutations/images/src/img11_permutohedron_g4.html
@@ -2,13 +2,24 @@
 <html>
   <head>
     <style type="text/css">
+      div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 10px;
+        bottom: 10px;
+        width: 100%;
+      }
     </style>
   </head>
-  <body style="background-color:#eee">
-    <svg width="10" height="10" version="1.1"
-         style="background-color:#fff"
-         id="svg" xmlns="http://www.w3.org/2000/svg">
-    </svg>
+  <body style="background-color:#fff">
+    <div>
+      <svg width="10" height="10" version="1.1"
+           style="background-color:#fff"
+           id="svg" xmlns="http://www.w3.org/2000/svg">
+      </svg>
+    </div>
     <script type="module" src="img11_permutohedron_g4.js"></script>
   </body>
 </html>
