img12: Support live face hiding/showing.

--- a/permutations/images/src/img12_permutohedron_w_options.html
+++ b/permutations/images/src/img12_permutohedron_w_options.html
@@ -33,6 +33,8 @@
         <span>&pi;<sub>3</sub></span>
         <span>&pi;<sub>4</sub></span>
 
+        <!-- XXX Add other cases here (square faces). -->
+
         &nbsp;
         &nbsp;
         &nbsp;
