--- a/permutations/images/src/img12_permutohedron_w_options.html
+++ b/permutations/images/src/img12_permutohedron_w_options.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <style type="text/css">
+      div {
+        text-align: center;
+      }
       .main-container {
         display: flex;
         flex-direction: column;
@@ -11,6 +14,15 @@
         top: 10px;
         bottom: 10px;
         width: 100%;
+      }
+      .row {
+        display: flex;
+      }
+      .row-section {
+        margin-right: 20px;
+      }
+      .row-section:last-child {
+        margin-right: 0;
       }
       .underline {
         text-decoration: underline;
@@ -26,34 +38,42 @@
            style="background-color:#fff"
            id="svg" xmlns="http://www.w3.org/2000/svg">
       </svg>
-      <div>
-        <b>Cross-sections:</b>
-        <span>&pi;<sub>1</sub></span>
-        <span>&pi;<sub>2</sub></span>
-        <span>&pi;<sub>3</sub></span>
-        <span>&pi;<sub>4</sub></span>
+      <div class="row">
+        <div class="row row-section">
+          <div>
+            <b>Cross-sections:</b>
+          </div>
+          <div style="display:block; text-align: center">
+            <span id="edges-0">&pi;<sub>1</sub></span>
+            <span id="edges-1">&pi;<sub>2</sub></span>
+            <span id="edges-2">&pi;<sub>3</sub></span>
+            <span id="edges-3">&pi;<sub>4</sub></span>
+            <br>
+            <span id="edges-0,1">&pi;<sub>1,2</sub></span>
+            <span id="edges-0,2">&pi;<sub>1,3</sub></span>
+            <span id="edges-0,3">&pi;<sub>1,4</sub></span>
+          </div>
+        </div>
 
         <!-- XXX Add other cases here (square faces). -->
 
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        &nbsp;
+        <div class="row row-section">
+          <div>
+            <b>Edge-types:</b>
+            (i j) : |i - j| =
+            <span id="edges-m1">1</span>
+            <span id="edges-m2">2</span>
+            <span id="edges-m3">3</span>
+            <p>
+            <span id="edges-none">no edge highlights</span>
+          </div>
+        </div>
 
-        <b>Edge-types:</b>
-        (i j) : |i - j| =
-        <span>1</span>
-        <span>2</span>
-        <span>3</span>
-
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        &nbsp;
-
-        <b>Faces:</b>
-        <span id="faces-show">show</span>
-        <span id="faces-hide">hide</span>
+        <div class="row-section">
+          <b>Faces:</b>
+          <span id="faces-show">show</span>
+          <span id="faces-hide">hide</span>
+        </div>
 
       </div>
       <div>a permutohedron</div>
