img13: Set up two SVG elements.
One will contain the circle scan, the other will contain the exploded 2d
version of a permutohedron.

--- a/permutations/images/src/img13_circle_scan.html
+++ b/permutations/images/src/img13_circle_scan.html
@@ -6,8 +6,13 @@
   </head>
   <body style="background-color:#eee">
     <svg width="10" height="10" version="1.1"
-         style="background-color:#fff"
-         id="svg" xmlns="http://www.w3.org/2000/svg">
+         style="background-color:#ffe"
+         id="svg1" xmlns="http://www.w3.org/2000/svg">
+    </svg>
+    <br />
+    <svg width="10" height="10" version="1.1"
+         style="background-color:#fef"
+         id="svg2" xmlns="http://www.w3.org/2000/svg">
     </svg>
     <script type="module" src="img13_circle_scan.js"></script>
   </body>
