img13: Make space's dot size customizable.
And customize it a bit. In particular, the dots are now larger in
img13's top part, making it better aligned with the bottom part.

--- a/permutations/images/src/img13_circle_scan.html
+++ b/permutations/images/src/img13_circle_scan.html
@@ -6,12 +6,12 @@
   </head>
   <body style="background-color:#eee">
     <svg width="10" height="10" version="1.1"
-         style="background-color:#ffe"
+         style="background-color:#fff"
          id="svg1" xmlns="http://www.w3.org/2000/svg">
     </svg>
     <br />
     <svg width="10" height="10" version="1.1"
-         style="background-color:#fef"
+         style="background-color:#fff"
          id="svg2" xmlns="http://www.w3.org/2000/svg">
     </svg>
     <script type="module" src="img13_circle_scan.js"></script>
