Add img17: A draggable version of img13.

--- a/permutations/images/src/img17_draggable_g4_scan.html
+++ b/permutations/images/src/img17_draggable_g4_scan.html
@@ -14,6 +14,6 @@
          style="background-color:#fff"
          id="svg2" xmlns="http://www.w3.org/2000/svg">
     </svg>
-    <script type="module" src="img13_circle_scan.js"></script>
+    <script type="module" src="img17_draggable_g4_scan.js"></script>
   </body>
 </html>
