img18: Add a slider.
For now the slider is read-only (to the user).

--- a/permutations/images/src/img18_g4_flattening.html
+++ b/permutations/images/src/img18_g4_flattening.html
@@ -9,6 +9,10 @@
          style="background-color:#fff"
          id="svg" xmlns="http://www.w3.org/2000/svg">
     </svg>
+    <br>
+    <div style="width:500px; text-align:center">
+      <input type="range" min="0" max="1" step="any" value="0" id="slider">
+    </div>
     <script type="module" src="img18_g4_flattening.js"></script>
   </body>
 </html>
