draw2: Use pixel sizes (retina displays), attrs.

--- a/permutations/images/src/draw_test1.html
+++ b/permutations/images/src/draw_test1.html
@@ -10,7 +10,7 @@
          id="svg" xmlns="http://www.w3.org/2000/svg">
     </svg>
     <!-- <br /> -->
-    <canvas width="10" height="10" id="canvas" style="background-color:#fef">
+    <canvas width="10" height="10" id="canvas" style="background-color:#ffe">
     </canvas>
     <script type="module" src="draw_test1.js"></script>
   </body>
