Work toward a svg/canvas switcher.
This will help me develop draw2.

--- a/permutations/images/src/img01_random_g3.html
+++ b/permutations/images/src/img01_random_g3.html
@@ -1,10 +1,19 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body style="background-color:#808">
     <svg width="10" height="10" version="1.1"
          style="background-color:#fff"
          id="svg" xmlns="http://www.w3.org/2000/svg">
     </svg>
+    <br>
+    container:
+    <div class="btn-group">
+      <button id="svgButton" class="btn-active">svg</button>
+      <button id="canvasButton">canvas</button>
+    </div>
     <script type="module" src="img01_random_g3.js"></script>
   </body>
 </html>
