draw2: Get the img01 svg/canvas switcher working.
Awesome

--- a/permutations/images/src/img01_random_g3.html
+++ b/permutations/images/src/img01_random_g3.html
@@ -4,10 +4,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:#808">
-    <canvas width="10" height="10" version="1.1"
+    <svg width="10" height="10" version="1.1"
          style="background-color:#fff"
-         id="canvas" xmlns="http://www.w3.org/2000/canvas">
-    </canvas>
+         id="svg" xmlns="http://www.w3.org/2000/svg">
+    </svg>
     <br>
     container:
     <div class="btn-group">
