--- a/permutations/images/src/img05_bipartite_g3.html
+++ b/permutations/images/src/img05_bipartite_g3.html
@@ -1,5 +1,8 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body style="background-color:#808">
     <svg width="10" height="10" version="1.1"
          style="background-color:#fff"
