draw2: Convert img08.

--- a/permutations/images/src/img08_circular.html
+++ b/permutations/images/src/img08_circular.html
@@ -1,40 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <style type="text/css">
-      .btn-group {
-        display: inline-block;
-      }
-
-      .btn-group button {
-        background-color: #04AA6D;
-        border: 1px solid green;
-        color: white;
-        padding: 2px 4px;
-        cursor: pointer;
-        float: left;
-      }
-  
-      .btn-group button:not(:last-child) {
-        border-right: none;
-      }
-  
-      /* Clear floats (clearfix hack) */
-      .btn-group:after {
-        content: "";
-        clear: both;
-        display: table;
-      }
-  
-      /* Add a background color on hover */
-      .btn-group button:hover {
-        background-color: #3e8e41;
-      }
-
-      .btn-group .btn-active {
-        background-color: blue;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:#eee">
     <svg width="10" height="10" version="1.1"
