--- a/permutations/images/src/img11_permutohedron_g4.html
+++ b/permutations/images/src/img11_permutohedron_g4.html
@@ -1,20 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <style type="text/css">
-      div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 10px;
-        bottom: 10px;
-        width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:#fff">
-    <div>
+    <div id="main" class="centering">
       <svg width="10" height="10" version="1.1"
            style="background-color:#fff"
            id="svg" xmlns="http://www.w3.org/2000/svg">
