--- a/permutations/images/src/img12_permutohedron_w_options.html
+++ b/permutations/images/src/img12_permutohedron_w_options.html
@@ -1,39 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <style type="text/css">
-      div {
-        text-align: center;
-      }
-      .main-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        position: absolute;
-        top: 10px;
-        bottom: 10px;
-        width: 100%;
-      }
-      .row {
-        display: flex;
-      }
-      .row-section {
-        margin-right: 20px;
-      }
-      .row-section:last-child {
-        margin-right: 0;
-      }
-      .underline {
-        text-decoration: underline;
-      }
-      .hover-button {
-        cursor: pointer;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:#fff">
-    <div class="main-container">
+    <div id="main" class="centering">
       <svg width="10" height="10" version="1.1"
            style="background-color:#fff"
            id="svg" xmlns="http://www.w3.org/2000/svg">
@@ -58,7 +29,7 @@
         <!-- XXX Add other cases here (square faces). -->
 
         <div class="row row-section">
-          <div>
+          <div style="text-align:center">
             <b>Edge-types:</b>
             (i j) : |i - j| =
             <span id="edges-m1">1</span>
