Work-in-progress: Updating img13 for draw2.
Currently it still works completely in svg, and partially works in
canvas, but the 3d circle is not yet rendering.

I will have to do a little work to fix that. I think the easiest way to
accomplish this is to create a Path2D instance using the path
description I've already figured out in space2.renderCircle().

--- a/permutations/images/src/img13_circle_scan.html
+++ b/permutations/images/src/img13_circle_scan.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <style type="text/css">
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:#fff">
     <svg width="10" height="10" version="1.1"
