--- a/permutations/images/src/img18_g4_flattening.html
+++ b/permutations/images/src/img18_g4_flattening.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <style type="text/css">
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:#fff">
     <svg width="10" height="10" version="1.1"
