Add charset declarations to all html.

--- a/permutations/images/src/circle_test.html
+++ b/permutations/images/src/circle_test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta charset="utf-8">
     <style type="text/css">
       .btn-group {
         display: inline-block;
