--- a/permutations/images/src/img03_random_g5.html
+++ b/permutations/images/src/img03_random_g5.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:#808">
