--- a/permutations/images/src/img06_bipartite_g4.html
+++ b/permutations/images/src/img06_bipartite_g4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:#808">
