--- a/permutations/images/src/scratch1.html
+++ b/permutations/images/src/scratch1.html
@@ -4,6 +4,9 @@ Try to draw G_n by randomly placing each point in a unit circle,
 and then drawing the transposition edges between them.
 -->
 <html>
+  <head>
+    <meta charset="utf-8">
+  </head>
   <body style="background-color:#808">
     <svg width="10" height="10" vertion="1.1"
      style="background-color:#fff"
