--- a/permutations/images/src/img19_g5_in_3d.html
+++ b/permutations/images/src/img19_g5_in_3d.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color:#fff">
-    <div class="centering">
+    <div id="main" class="centering">
       <svg width="10" height="10" version="1.1"
            style="background-color:#fff"
            id="svg" xmlns="http://www.w3.org/2000/svg">
