img22: Make the slider initially functional.
I'd still like to improve the appearance of this a bit. I'd like to
better distinguish the background from the foreground, and I'd like to
clarify the tracking of different nodes from one variant to the next.

--- a/permutations/images/src/img22_g4_variations.html
+++ b/permutations/images/src/img22_g4_variations.html
@@ -7,6 +7,7 @@
   <body style="background-color:#fff">
     <div id="main" class="centering">
       <canvas id="canvas"></canvas>
+      <input type="range" min="0" max="4" step="any" value="0" id="slider">
     </div>
     <script type="module" src="img22_g4_variations.js"></script>
   </body>
