--- a/permutations/part1/template.html
+++ b/permutations/part1/template.html
@@ -21,6 +21,7 @@
       <div class="title">$title$</div>
       <div class="author">$author$</div>
       <div class="date">$date$</div>
+      \(\newcommand{\customstrut}{}\)
       $body$
     </div>
   </body>
