--- a/permutations/part2/template.html
+++ b/permutations/part2/template.html
@@ -30,6 +30,7 @@
       \(\newcommand{\crossedoutfive}{\dot 5 \kern -5pt {\scriptscriptstyle{\diagup\atop\vphantom{\textstyle 5}}}}\)
       \(\newcommand{\crossedoutsix}{\dot 6 \kern -5pt {\scriptscriptstyle{\diagup\atop\vphantom{\textstyle 6}}}}\)
       \(\newcommand{\crossedoutseven}{\dot 7 \kern -5pt {\scriptscriptstyle{\diagup\atop\vphantom{\textstyle 7}}}}\)
+      \(\newcommand{\lowerhaty}{\lower 1ex{\hat y}}\)
       $body$
     </div>
   </body>
