Write up the general chalkboard algorithm desc'n.

--- a/permutations/part2/template.html
+++ b/permutations/part2/template.html
@@ -31,6 +31,7 @@
       \(\newcommand{\crossedoutsix}{\dot 6 \kern -5pt {\scriptscriptstyle{\diagup\atop\vphantom{\textstyle 6}}}}\)
       \(\newcommand{\crossedoutseven}{\dot 7 \kern -5pt {\scriptscriptstyle{\diagup\atop\vphantom{\textstyle 7}}}}\)
       \(\newcommand{\lowerhaty}{\lower 1ex{\hat y}}\)
+      \(\newcommand{\lhy}{\lower 1ex{\hat y}}\)
       $body$
     </div>
   </body>
