Make perms2 mobile-friendly.

--- a/permutations/part2/template.html
+++ b/permutations/part2/template.html
@@ -32,6 +32,7 @@
       \(\newcommand{\crossedoutseven}{\dot 7 \kern -5pt {\scriptscriptstyle{\diagup\atop\vphantom{\textstyle 7}}}}\)
       \(\newcommand{\lowerhaty}{\lower 1ex{\hat y}}\)
       \(\newcommand{\lhy}{\lower 1ex{\hat y}}\)
+      \(\renewcommand{\hat}[1]{\widehat{#1}}\)
       $body$
     </div>
   </body>
