--- a/permutations/part2/template.html
+++ b/permutations/part2/template.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WFTYSG93P6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-WFTYSG93P6');
+    </script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="format-detection" content="telephone=no">
     <title>$title$</title>
@@ -34,6 +43,16 @@
       \(\newcommand{\lhy}{\lower 1ex{\hat y}}\)
       \(\renewcommand{\hat}[1]{\widehat{#1}}\)
       $body$
+    </div>
+        <div style="margin-top:40px">
+        <hr style="margin-bottom:5px">
+        <i style="font-size:1.4rem;color:#aaa;margin-bottom:0">
+            You can get emails about new posts if you'd like:</i>
+        <p style="margin:0"></p>
+
+      <iframe src="https://tylerneylon.substack.com/embed" width="300"
+        height="320" style="background:white; height: 180px;
+        margin-top:0;" frameborder="0" scrolling="no"></iframe>
     </div>
   </body>
 </html>
