--- a/lego_puzzle/img_src/two_squares.html
+++ b/lego_puzzle/img_src/two_squares.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <style type="text/css">
+.gray {
+  color: #888;
+}
 .btn-group {
   display: inline-block;
 }
