--- a/lego_puzzle/img_src/cube_2_faces.html
+++ b/lego_puzzle/img_src/cube_2_faces.html
@@ -6,6 +6,12 @@
 .gray {
   color: #888;
 }
+.framed {
+  padding: 5px;
+  border: 3px solid black;
+  margin: 5px 0;
+  display: inline-block;
+}
 .btn-group {
   display: inline-block;
 }
