Highlight new min shapes as we sort (debug msgs).

--- a/lego_puzzle/img_src/cube_2_faces.html
+++ b/lego_puzzle/img_src/cube_2_faces.html
@@ -12,6 +12,10 @@
   margin: 5px 0;
   display: inline-block;
 }
+.highlight {
+  font-weight: bold;
+  color: #c38;
+}
 .btn-group {
   display: inline-block;
 }
