Working on lego_puzzle write-up.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -52,6 +52,18 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   class="math inline">\(1\times 2\times 2\)</span> in size, and find a
   way to pack them into a <span class="math inline">\(3\times 3\times
   3\)</span> cube.</p>
+  <p>(image here)</p>
+  <p>I learned about this puzzle through Donald Knuth’s <em>The Art of
+  Computer Programming,</em> <span class="math inline">\(\S
+  7.2.2.1\)</span>. The boxes have a total volume of 24 cubies (I’ll
+  call a <span class="math inline">\(1\times 1\times 1\)</span> unit a
+  “cubie,” as Knuth does). They certainly have a chance of fitting into
+  the 27 cubie spaces of the larger <span class="math inline">\(3\times
+  3\times 3\)</span> volume. But the initial configurations I tried
+  failed to fit:</p>
+  <p>(another image here)</p>
+  <p>You might be able to solve this by simply thinking about it. But
+  it’s even more fun to play with a physical model.</p>
     </div>
         <div style="margin-top:40px">
         <hr style="margin-bottom:5px">
