Lego puzzle: Add svg for img2.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -61,8 +61,9 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   “cubie,” as Knuth does). They certainly have a chance of fitting into
   the 27 cubie spaces of the larger <span class="math inline">\(3\times
   3\times 3\)</span> volume. But the initial configurations I tried
-  failed to fit:</p>
-  <p>(another image here)</p>
+  failed to fit more than five boxes in the space allowed:</p>
+  <object type="image/svg+xml" data="img/img2.svg">
+  </object>
   <p>You might be able to solve this by simply thinking about it. But
   it’s even more fun to play with a physical model.</p>
     </div>
