Lego puzzle: Work on cross-platform images.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -52,8 +52,7 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   class="math inline">\(1\times 2\times 2\)</span> in size, and find a
   way to pack them into a <span class="math inline">\(3\times 3\times
   3\)</span> cube.</p>
-  <object type="image/svg+xml" data="img/img1.svg">
-  </object>
+  <p><img src="img/img1.svg" /></p>
   <p>I learned about this puzzle through Donald Knuth’s <em>The Art of
   Computer Programming,</em> <span class="math inline">\(\S
   7.2.2.1\)</span>. The six boxes have a total volume of 24 cubies (I’ll
@@ -62,8 +61,7 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   the 27 cubie spaces of the larger <span class="math inline">\(3\times
   3\times 3\)</span> volume. But the initial configurations I tried
   failed to fit more than five boxes in the space allowed:</p>
-  <object type="image/svg+xml" data="img/img2.svg">
-  </object>
+  <p><img src="img/img2.svg" /></p>
   <p>You might be able to solve this by simply thinking about it. But
   it’s even more fun to play with a physical model.</p>
     </div>
