Lego puzzle: Add the Lego cube image.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -63,7 +63,10 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   failed to fit more than five boxes in the space allowed:</p>
   <p><img src="img/img2.svg" /></p>
   <p>You might be able to solve this by simply thinking about it. But
-  it’s even more fun to play with a physical model.</p>
+  it’s even more fun to play with a physical model. Did you know that a
+  <span class="math inline">\(2\times 2\)</span> Lego brick with 2
+  tile-heights on top forms a perfect cube?</p>
+  <p><img src="img/annotated_lego_cube.png" /></p>
     </div>
         <div style="margin-top:40px">
         <hr style="margin-bottom:5px">
