--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -67,6 +67,8 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   <span class="math inline">\(2\times 2\)</span> Lego brick with 2
   tile-heights on top forms a perfect cube?</p>
   <p><img src="img/annotated_lego_cube.png" /></p>
+  <p>This allows us to construct the puzzle like so:</p>
+  <p><img src="img/piece_steps2.png" style="width:90.0%" /></p>
     </div>
         <div style="margin-top:40px">
         <hr style="margin-bottom:5px">
